--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.0.1",
   "devDependencies": {
     "css-loader": "^2.1.1",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "stats-webpack-plugin": "*",
     "style-loader": "^0.23.1",
     "webpack": "*",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "*"
+  },
+  "dependencies": {
+    "bulma": "^0.7.4"
   }
 }
