--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "webpack-dev-server": "*"
   },
   "dependencies": {
-    "bulma": "^0.7.4"
+    "bulma": "^0.7.4",
+    "chart.js": "^2.8.0"
   }
 }
