--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bulma": "^0.7.4",
-    "chart.js": "^2.8.0"
+    "chart.js": "^2.8.0",
+    "jquery": "^3.4.0"
   }
 }
